[package]
name = "mugle_config"
version = "5.2.0-alpha.3"
authors = ["Mugle Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for mugle, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mugleproject/mugle"
keywords = [ "crypto", "mugle", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "2.0"

mugle_core = { path = "../core", version = "5.2.0-alpha.3" }
mugle_servers = { path = "../servers", version = "5.2.0-alpha.3" }
mugle_p2p = { path = "../p2p", version = "5.2.0-alpha.3" }
mugle_util = { path = "../util", version = "5.2.0-alpha.3" }

[dev-dependencies]
pretty_assertions = "0.6.1"
