[package]
name = "mugle_pool"
version = "5.2.0-alpha.3"
authors = ["Mugle Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for mugle, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mugleproject/mugle"
keywords = [ "crypto", "mugle", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = "0.4.11"
failure = "0.1"
failure_derive = "0.1"

mugle_core = { path = "../core", version = "5.2.0-alpha.3" }
mugle_keychain = { path = "../keychain", version = "5.2.0-alpha.3" }
mugle_util = { path = "../util", version = "5.2.0-alpha.3" }

[dev-dependencies]
mugle_chain = { path = "../chain", version = "5.2.0-alpha.3" }
