[package]
name = "mugle_store"
version = "5.1.2-alpha.1"
authors = ["Mugle Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mugleproject/mugle"
keywords = [ "crypto", "mugle", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
byteorder = "1"
croaring = "0.4.6"
libc = "0.2"
failure = "0.1"
failure_derive = "0.1"
lmdb-zero = "0.4.4"
memmap = "0.7"
tempfile = "3.1"
serde = "1"
serde_derive = "1"
log = "0.4"

mugle_core = { path = "../core", version = "5.1.2-alpha.1" }
mugle_util = { path = "../util", version = "5.1.2-alpha.1" }

[dev-dependencies]
chrono = "0.4.11"
rand = "0.6"
filetime = "0.2"
env_logger = "0.7"
